--- a/flow/BUILD.gn
+++ b/flow/BUILD.gn
@@ -186,6 +186,7 @@ if (enable_unittests) {
       ":flow_fixtures",
       ":flow_testing",
       "//flutter/common/graphics",
+      "//flutter/shell/common:base64",
       "//flutter/display_list/testing:display_list_testing",
       "//flutter/fml",
       "//flutter/testing:skia",
