--- a/impeller/entity/BUILD.gn
+++ b/impeller/entity/BUILD.gn
@@ -103,6 +103,7 @@ impeller_shaders("modern_entity_shaders") {
 
 impeller_shaders("framebuffer_blend_entity_shaders") {
   name = "framebuffer_blend"
+  require_framebuffer_fetch = true
 
   if (is_mac && !is_ios) {
     # Note: this needs to correspond to the Apple7 Support family
