[Impeller] Refactor CapabilitiesGLES into a Capabilties. (#46621)
From https://github.com/flutter/engine/pull/46585

For Framebuffer fetch and other changes we should refactor the CapabilitiesGLES into a regular capabilities.

--- a/impeller/renderer/backend/gles/BUILD.gn
+++ b/impeller/renderer/backend/gles/BUILD.gn
@@ -14,6 +14,7 @@ config("gles_config") {
 impeller_component("gles_unittests") {
   testonly = true
   sources = [
+    "test/capabilities_unittests.cc",
     "test/mock_gles.cc",
     "test/mock_gles.h",
     "test/mock_gles_unittests.cc",
