--- a/impeller/renderer/backend/gles/BUILD.gn
+++ b/impeller/renderer/backend/gles/BUILD.gn
@@ -15,6 +15,7 @@ impeller_component("gles_unittests") {
   testonly = true
   sources = [
     "test/capabilities_unittests.cc",
+    "test/formats_gles_unittests.cc",
     "test/mock_gles.cc",
     "test/mock_gles.h",
     "test/mock_gles_unittests.cc",
