--- a/impeller/renderer/backend/gles/BUILD.gn
+++ b/impeller/renderer/backend/gles/BUILD.gn
@@ -14,6 +14,7 @@ config("gles_config") {
 impeller_component("gles_unittests") {
   testonly = true
   sources = [
+    "test/buffer_bindings_gles_unittests.cc",
     "test/capabilities_unittests.cc",
     "test/mock_gles.cc",
     "test/mock_gles.h",
