--- a/.ci.yaml
+++ b/.ci.yaml
@@ -51,9 +51,9 @@ platform_properties:
         [
           {"dependency": "open_jdk", "version": "version:11"}
         ]
-      device_type: none
-      cpu: x86
-      os: Mac-14
+      device_os: iOS-16
+      cpu: arm64
+      os: Mac-13
       $flutter/osx_sdk : >-
         {
           "sdk_version": "14e300c"
@@ -101,190 +101,190 @@ targets:
         }
     timeout: 60
 
-  - name: Linux linux_benchmarks
-    enabled_branches:
-      - main
-    recipe: engine_v2/builder
-    presubmit: false
-    properties:
-      config_name: linux_benchmarks
-    timeout: 60
+  # - name: Linux linux_benchmarks
+  #   enabled_branches:
+  #     - main
+  #   recipe: engine_v2/builder
+  #   presubmit: false
+  #   properties:
+  #     config_name: linux_benchmarks
+  #   timeout: 60
 
-  - name: Linux Fuchsia
-    recipe: engine/engine
-    properties:
-      build_fuchsia: "true"
-      fuchsia_ctl_version: version:0.0.27
-      # ensure files from pre-production Fuchsia SDK tests are purged from cache
-      clobber: "true"
-    timeout: 90
-    runIfNot:
-      - lib/web_ui/**
-      - shell/platform/android/**
-      - shell/platform/darwin/**
-      - shell/platform/glfw/**
-      - shell/platform/linux/**
-      - shell/platform/windows/**
-      - web_sdk/**
+  # - name: Linux Fuchsia
+  #   recipe: engine/engine
+  #   properties:
+  #     build_fuchsia: "true"
+  #     fuchsia_ctl_version: version:0.0.27
+  #     # ensure files from pre-production Fuchsia SDK tests are purged from cache
+  #     clobber: "true"
+  #   timeout: 90
+  #   runIfNot:
+  #     - lib/web_ui/**
+  #     - shell/platform/android/**
+  #     - shell/platform/darwin/**
+  #     - shell/platform/glfw/**
+  #     - shell/platform/linux/**
+  #     - shell/platform/windows/**
+  #     - web_sdk/**
 
-  - name: Linux Fuchsia FEMU
-    recipe: engine/femu_test
-    properties:
-      add_recipes_cq: "true"
-      build_fuchsia: "true"
-      fuchsia_ctl_version: version:0.0.27
-      # ensure files from pre-production Fuchsia SDK tests are purged from cache
-      clobber: "true"
-      emulator_arch: "x64"
-      enable_cso: "true"
-    timeout: 60
-    runIfNot:
-      - lib/web_ui/**
-      - shell/platform/android/**
-      - shell/platform/darwin/**
-      - shell/platform/glfw/**
-      - shell/platform/linux/**
-      - shell/platform/windows/**
-      - web_sdk/**
+  # - name: Linux Fuchsia FEMU
+  #   recipe: engine/femu_test
+  #   properties:
+  #     add_recipes_cq: "true"
+  #     build_fuchsia: "true"
+  #     fuchsia_ctl_version: version:0.0.27
+  #     # ensure files from pre-production Fuchsia SDK tests are purged from cache
+  #     clobber: "true"
+  #     emulator_arch: "x64"
+  #     enable_cso: "true"
+  #   timeout: 60
+  #   runIfNot:
+  #     - lib/web_ui/**
+  #     - shell/platform/android/**
+  #     - shell/platform/darwin/**
+  #     - shell/platform/glfw/**
+  #     - shell/platform/linux/**
+  #     - shell/platform/windows/**
+  #     - web_sdk/**
 
-  - name: Linux Fuchsia arm64 FEMU
-    recipe: engine/femu_test
-    properties:
-      build_fuchsia: "true"
-      fuchsia_ctl_version: version:0.0.27
-      # ensure files from pre-production Fuchsia SDK tests are purged from cache
-      clobber: "true"
-      emulator_arch: "arm64"
-      enable_cso: "true"
-    timeout: 60
-    bringup: true
-    runIfNot:
-      - lib/web_ui/**
-      - shell/platform/android/**
-      - shell/platform/darwin/**
-      - shell/platform/glfw/**
-      - shell/platform/linux/**
-      - shell/platform/windows/**
-      - web_sdk/**
+  # - name: Linux Fuchsia arm64 FEMU
+  #   recipe: engine/femu_test
+  #   properties:
+  #     build_fuchsia: "true"
+  #     fuchsia_ctl_version: version:0.0.27
+  #     # ensure files from pre-production Fuchsia SDK tests are purged from cache
+  #     clobber: "true"
+  #     emulator_arch: "arm64"
+  #     enable_cso: "true"
+  #   timeout: 60
+  #   bringup: true
+  #   runIfNot:
+  #     - lib/web_ui/**
+  #     - shell/platform/android/**
+  #     - shell/platform/darwin/**
+  #     - shell/platform/glfw/**
+  #     - shell/platform/linux/**
+  #     - shell/platform/windows/**
+  #     - web_sdk/**
 
-  - name: Linux linux_fuchsia
-    bringup: true
-    recipe: engine_v2/engine_v2
-    timeout: 60
-    properties:
-      release_build: "true"
-      config_name: linux_fuchsia
-    drone_dimensions:
-      - os=Linux
-    runIfNot:
-      - lib/web_ui/**
-      - shell/platform/android/**
-      - shell/platform/darwin/**
-      - shell/platform/glfw/**
-      - shell/platform/linux/**
-      - shell/platform/windows/**
-      - web_sdk/**
+  # - name: Linux linux_fuchsia
+  #   bringup: true
+  #   recipe: engine_v2/engine_v2
+  #   timeout: 60
+  #   properties:
+  #     release_build: "true"
+  #     config_name: linux_fuchsia
+  #   drone_dimensions:
+  #     - os=Linux
+  #   runIfNot:
+  #     - lib/web_ui/**
+  #     - shell/platform/android/**
+  #     - shell/platform/darwin/**
+  #     - shell/platform/glfw/**
+  #     - shell/platform/linux/**
+  #     - shell/platform/windows/**
+  #     - web_sdk/**
 
-  - name: Linux Framework Smoke Tests
-    recipe: engine/framework_smoke
-    enabled_branches:
-      - main
-    timeout: 60
+  # - name: Linux Framework Smoke Tests
+  #   recipe: engine/framework_smoke
+  #   enabled_branches:
+  #     - main
+  #   timeout: 60
 
-  - name: Linux linux_clang_tidy
-    recipe: engine_v2/engine_v2
-    presubmit: false
-    timeout: 120
-    properties:
-      config_name: linux_clang_tidy
-    runIf:
-      - DEPS
-      - .ci.yaml
-      - tools/clang_tidy/**
-      - ci/builders/**
-      - ci/clang_tidy.sh
-      - "**.h"
-      - "**.c"
-      - "**.cc"
-      - "**.fbs"
-      - "**.frag"
-      - "**.vert"
+  # - name: Linux linux_clang_tidy
+  #   recipe: engine_v2/engine_v2
+  #   presubmit: false
+  #   timeout: 120
+  #   properties:
+  #     config_name: linux_clang_tidy
+  #   runIf:
+  #     - DEPS
+  #     - .ci.yaml
+  #     - tools/clang_tidy/**
+  #     - ci/builders/**
+  #     - ci/clang_tidy.sh
+  #     - "**.h"
+  #     - "**.c"
+  #     - "**.cc"
+  #     - "**.fbs"
+  #     - "**.frag"
+  #     - "**.vert"
 
-  - name: Linux linux_clang_tidy_presubmit
-    recipe: engine_v2/engine_v2
-    timeout: 120
-    properties:
-      config_name: linux_clang_tidy_presubmit
-    runIf:
-      - DEPS
-      - .ci.yaml
-      - tools/clang_tidy/**
-      - ci/builders/**
-      - ci/clang_tidy.sh
-      - "**.h"
-      - "**.c"
-      - "**.cc"
-      - "**.fbs"
-      - "**.frag"
-      - "**.vert"
+  # - name: Linux linux_clang_tidy_presubmit
+  #   recipe: engine_v2/engine_v2
+  #   timeout: 120
+  #   properties:
+  #     config_name: linux_clang_tidy_presubmit
+  #   runIf:
+  #     - DEPS
+  #     - .ci.yaml
+  #     - tools/clang_tidy/**
+  #     - ci/builders/**
+  #     - ci/clang_tidy.sh
+  #     - "**.h"
+  #     - "**.c"
+  #     - "**.cc"
+  #     - "**.fbs"
+  #     - "**.frag"
+  #     - "**.vert"
 
-  - name: Linux linux_arm_host_engine
-    recipe: engine_v2/engine_v2
-    timeout: 120
-    properties:
-      add_recipes_cq: "true"
-      release_build: "true"
-      config_name: linux_arm_host_engine
-    drone_dimensions:
-      - os=Linux
+  # - name: Linux linux_arm_host_engine
+  #   recipe: engine_v2/engine_v2
+  #   timeout: 120
+  #   properties:
+  #     add_recipes_cq: "true"
+  #     release_build: "true"
+  #     config_name: linux_arm_host_engine
+  #   drone_dimensions:
+  #     - os=Linux
 
-  - name: Linux linux_host_engine
-    recipe: engine_v2/engine_v2
-    timeout: 120
-    properties:
-      add_recipes_cq: "true"
-      release_build: "true"
-      config_name: linux_host_engine
-    drone_dimensions:
-      - os=Linux
+  # - name: Linux linux_host_engine
+  #   recipe: engine_v2/engine_v2
+  #   timeout: 120
+  #   properties:
+  #     add_recipes_cq: "true"
+  #     release_build: "true"
+  #     config_name: linux_host_engine
+  #   drone_dimensions:
+  #     - os=Linux
 
-  - name: Linux linux_host_desktop_engine
-    recipe: engine_v2/engine_v2
-    timeout: 120
-    properties:
-      add_recipes_cq: "true"
-      release_build: "true"
-      config_name: linux_host_desktop_engine
-    drone_dimensions:
-      - os=Linux
+  # - name: Linux linux_host_desktop_engine
+  #   recipe: engine_v2/engine_v2
+  #   timeout: 120
+  #   properties:
+  #     add_recipes_cq: "true"
+  #     release_build: "true"
+  #     config_name: linux_host_desktop_engine
+  #   drone_dimensions:
+  #     - os=Linux
 
-  - name: Linux linux_android_aot_engine
-    recipe: engine_v2/engine_v2
-    timeout: 120
-    properties:
-      add_recipes_cq: "true"
-      release_build: "true"
-      config_name: linux_android_aot_engine
-    drone_dimensions:
-      - os=Linux
+  # - name: Linux linux_android_aot_engine
+  #   recipe: engine_v2/engine_v2
+  #   timeout: 120
+  #   properties:
+  #     add_recipes_cq: "true"
+  #     release_build: "true"
+  #     config_name: linux_android_aot_engine
+  #   drone_dimensions:
+  #     - os=Linux
 
-  - name: Linux linux_android_debug_engine
-    recipe: engine_v2/engine_v2
-    timeout: 120
-    properties:
-      add_recipes_cq: "true"
-      release_build: "true"
-      config_name: linux_android_debug_engine
-    drone_dimensions:
-      - os=Linux
+  # - name: Linux linux_android_debug_engine
+  #   recipe: engine_v2/engine_v2
+  #   timeout: 120
+  #   properties:
+  #     add_recipes_cq: "true"
+  #     release_build: "true"
+  #     config_name: linux_android_debug_engine
+  #   drone_dimensions:
+  #     - os=Linux
 
-  - name: Linux linux_license
-    recipe: engine_v2/builder
-    timeout: 120
-    properties:
-      add_recipes_cq: "true"
-      config_name: linux_license
-      clobber: "true"
+  # - name: Linux linux_license
+  #   recipe: engine_v2/builder
+  #   timeout: 120
+  #   properties:
+  #     add_recipes_cq: "true"
+  #     config_name: linux_license
+  #     clobber: "true"
 
   - name: Linux linux_web_engine
     recipe: engine_v2/engine_v2
@@ -295,42 +295,42 @@ targets:
     drone_dimensions:
       - os=Linux
 
-  - name: Linux linux_unopt
-    recipe: engine_v2/engine_v2
-    timeout: 120
-    properties:
-      config_name: linux_unopt
+  # - name: Linux linux_unopt
+  #   recipe: engine_v2/engine_v2
+  #   timeout: 120
+  #   properties:
+  #     config_name: linux_unopt
 
-  - name: Linux Web Framework tests
-    recipe: engine/web_engine_framework
-    enabled_branches:
-      - main
-    properties:
-      add_recipes_cq: "true"
-      cores: "32"
-      gclient_variables: >-
-        {"download_emsdk": true}
-      dependencies: >-
-        [
-          {"dependency": "chrome_and_driver", "version": "version:117.0"},
-          {"dependency": "curl", "version": "version:7.64.0"}
-        ]
-      framework: "true"
-      no_goma: "true"
-      drone_dimensions: >
-        ["device_type=none", "os=Linux"]
-      shard: web_tests
-      subshards: >-
-              ["0", "1", "2", "3", "4", "5", "6", "7_last"]
-    timeout: 60
-    runIf:
-      - DEPS
-      - .ci.yaml
-      - lib/web_ui/**
-      - web_sdk/**
-      - tools/**
-      - ci/**
-      - flutter_frontend_server/**
+  # - name: Linux Web Framework tests
+  #   recipe: engine/web_engine_framework
+  #   enabled_branches:
+  #     - main
+  #   properties:
+  #     add_recipes_cq: "true"
+  #     cores: "32"
+  #     gclient_variables: >-
+  #       {"download_emsdk": true}
+  #     dependencies: >-
+  #       [
+  #         {"dependency": "chrome_and_driver", "version": "version:117.0"},
+  #         {"dependency": "curl", "version": "version:7.64.0"}
+  #       ]
+  #     framework: "true"
+  #     no_goma: "true"
+  #     drone_dimensions: >
+  #       ["device_type=none", "os=Linux"]
+  #     shard: web_tests
+  #     subshards: >-
+  #             ["0", "1", "2", "3", "4", "5", "6", "7_last"]
+  #   timeout: 60
+  #   runIf:
+  #     - DEPS
+  #     - .ci.yaml
+  #     - lib/web_ui/**
+  #     - web_sdk/**
+  #     - tools/**
+  #     - ci/**
+  #     - flutter_frontend_server/**
 
   - name: Linux mac_android_aot_engine
     recipe: engine_v2/engine_v2
@@ -399,7 +399,7 @@ targets:
           "sdk_version": "14e300c"
         }
     drone_dimensions:
-      - os=Mac-12
+      - os=Mac-13
 
   - name: Linux mac_unopt
     recipe: engine_v2/engine_v2
@@ -419,8 +419,10 @@ targets:
         {
           "sdk_version": "14e300c"
         }
+    device_type: none
+    cpu: x86
     drone_dimensions:
-      - os=Mac-12
+      - os=Mac-13
       - cpu=x86
 
   - name: Mac impeller-cmake-example
