Move //third_party/glfw to //flutter/third_party/glfw
As part of eliminating the Flutter buildroot (#67373), we are moving all
third-party dependencies from //third_party to //flutter/third_party.

This is the engine-side follow-up to flutter/buildroot#777.

Once all third-party dependencies have been migrated, tooling and config
will be moved and the buildroot will be eliminated altogether.

Issue: https://github.com/flutter/flutter/issues/136284

--- a/impeller/playground/BUILD.gn
+++ b/impeller/playground/BUILD.gn
@@ -47,7 +47,7 @@ impeller_component("playground") {
     "../scene/shaders",
     "imgui:imgui_impeller_backend",
     "//flutter/fml",
-    "//third_party/glfw",
+    "//flutter/third_party/glfw",
     "//third_party/imgui:imgui_glfw",
   ]
 
