--- a/shell/platform/android/BUILD.gn
+++ b/shell/platform/android/BUILD.gn
@@ -96,12 +96,12 @@ source_set("flutter_shell_native_src") {
     "apk_asset_provider.h",
     "flutter_main.cc",
     "flutter_main.h",
-    "hardware_buffer_external_texture.cc",
-    "hardware_buffer_external_texture.h",
-    "hardware_buffer_external_texture_gl.cc",
-    "hardware_buffer_external_texture_gl.h",
-    "hardware_buffer_external_texture_vk.cc",
-    "hardware_buffer_external_texture_vk.h",
+    "image_external_texture.cc",
+    "image_external_texture.h",
+    "image_external_texture_gl.cc",
+    "image_external_texture_gl.h",
+    "image_external_texture_vk.cc",
+    "image_external_texture_vk.h",
     "library_loader.cc",
     "ndk_helpers.cc",
     "ndk_helpers.h",
