--- a/impeller/renderer/backend/metal/BUILD.gn
+++ b/impeller/renderer/backend/metal/BUILD.gn
@@ -8,6 +8,8 @@ impeller_component("metal") {
   sources = [
     "allocator_mtl.h",
     "allocator_mtl.mm",
+    "app_state_notifier.h",
+    "app_state_notifier.mm",
     "blit_command_mtl.h",
     "blit_command_mtl.mm",
     "blit_pass_mtl.h",
@@ -54,4 +56,7 @@ impeller_component("metal") {
   ]
 
   frameworks = [ "Metal.framework" ]
+  if (is_ios) {
+    frameworks += [ "UIKit.framework" ]
+  }
 }
