--- a/flutter_frontend_server/BUILD.gn
+++ b/flutter_frontend_server/BUILD.gn
@@ -9,9 +9,8 @@ copy("frontend_server") {
     snapshot =
         "$host_prebuilt_dart_sdk/bin/snapshots/frontend_server.dart.snapshot"
   } else {
-    deps = [ "//flutter/build/dart:dart_sdk" ]
-    snapshot =
-        "$root_out_dir/dart-sdk/bin/snapshots/frontend_server.dart.snapshot"
+    deps = [ "//third_party/dart/utils/kernel-service:frontend_server" ]
+    snapshot = "$root_out_dir/frontend_server.dart.snapshot"
   }
 
   sources = [ snapshot ]
