--- a/impeller/renderer/backend/vulkan/BUILD.gn
+++ b/impeller/renderer/backend/vulkan/BUILD.gn
@@ -61,6 +61,8 @@ impeller_component("vulkan") {
     "fence_waiter_vk.h",
     "formats_vk.cc",
     "formats_vk.h",
+    "gpu_tracer_vk.cc",
+    "gpu_tracer_vk.h",
     "limits_vk.h",
     "pass_bindings_cache.cc",
     "pass_bindings_cache.h",
