Move imgui from buildroot to flutter third_party
As part of eliminating the Flutter buildroot (#67373), we are moving all
third-party dependencies from //third_party to //flutter/third_party.

Once all third-party dependencies have been migrated, tooling and config
will be moved and the buildroot will be eliminated altogether.

Issue: https://github.com/flutter/flutter/issues/136284

No tests changed because there is no semantic change to this PR. This is
simply relocating a dependency.

--- a/impeller/playground/BUILD.gn
+++ b/impeller/playground/BUILD.gn
@@ -48,7 +48,7 @@ impeller_component("playground") {
     "imgui:imgui_impeller_backend",
     "//flutter/fml",
     "//flutter/third_party/glfw",
-    "//third_party/imgui:imgui_glfw",
+    "//flutter/third_party/imgui:imgui_glfw",
   ]
 
   if (impeller_supports_rendering) {
