--- a/testing/dart/pubspec.yaml
+++ b/testing/dart/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   litetest: any
   path: any
+  skia_gold_client: any
   sky_engine: any
   vector_math: any
   vm_service: any
@@ -43,6 +44,8 @@ dependency_overrides:
     path: ../../../third_party/dart/third_party/pkg/protobuf/protobuf
   smith:
     path: ../../../third_party/dart/pkg/smith
+  skia_gold_client:
+    path: ../skia_gold_client
   sky_engine:
     path: ../../sky/packages/sky_engine
   vector_math:
