--- a/testing/dart/pubspec.yaml
+++ b/testing/dart/pubspec.yaml
@@ -30,8 +30,12 @@ dependency_overrides:
     path: ../../../third_party/dart/pkg/async_helper
   collection:
     path: ../../../third_party/dart/third_party/pkg/collection
+  crypto:
+    path: ../../../third_party/dart/third_party/pkg/crypto
   expect:
     path: ../../../third_party/dart/pkg/expect
+  file:
+    path: ../../../third_party/pkg/file/packages/file
   fixnum:
     path: ../../../third_party/dart/third_party/pkg/fixnum
   litetest:
@@ -40,6 +44,10 @@ dependency_overrides:
     path: ../../../third_party/dart/pkg/meta
   path:
     path: ../../../third_party/dart/third_party/pkg/path
+  platform:
+    path: ../../../third_party/pkg/platform
+  process:
+    path: ../../../third_party/pkg/process
   protobuf:
     path: ../../../third_party/dart/third_party/pkg/protobuf/protobuf
   smith:
@@ -48,6 +56,8 @@ dependency_overrides:
     path: ../skia_gold_client
   sky_engine:
     path: ../../sky/packages/sky_engine
+  typed_data:
+    path: ../../../third_party/dart/third_party/pkg/typed_data
   vector_math:
     path: ../../../third_party/pkg/vector_math
   vm_service:
