--- a/testing/dart/pubspec.yaml
+++ b/testing/dart/pubspec.yaml
@@ -26,28 +26,28 @@ dependencies:
 
 dependency_overrides:
   async_helper:
-    path: ../../../third_party/dart/pkg/async_helper
+    path: ../../third_party/dart/pkg/async_helper
   collection:
-    path: ../../../third_party/dart/third_party/pkg/collection
+    path: ../../third_party/dart/third_party/pkg/collection
   expect:
-    path: ../../../third_party/dart/pkg/expect
+    path: ../../third_party/dart/pkg/expect
   fixnum:
-    path: ../../../third_party/dart/third_party/pkg/fixnum
+    path: ../../third_party/dart/third_party/pkg/fixnum
   litetest:
     path: ../litetest
   meta:
-    path: ../../../third_party/dart/pkg/meta
+    path: ../../third_party/dart/pkg/meta
   path:
-    path: ../../../third_party/dart/third_party/pkg/path
+    path: ../../third_party/dart/third_party/pkg/path
   protobuf:
-    path: ../../../third_party/dart/third_party/pkg/protobuf/protobuf
+    path: ../../third_party/dart/third_party/pkg/protobuf/protobuf
   smith:
-    path: ../../../third_party/dart/pkg/smith
+    path: ../../third_party/dart/pkg/smith
   sky_engine:
     path: ../../sky/packages/sky_engine
   vector_math:
-    path: ../../../third_party/pkg/vector_math
+    path: ../../third_party/pkg/vector_math
   vm_service:
-    path: ../../../third_party/dart/pkg/vm_service
+    path: ../../third_party/dart/pkg/vm_service
   vm_service_protos:
-    path: ../../../third_party/dart/pkg/vm_service_protos
+    path: ../../third_party/dart/pkg/vm_service_protos
