--- a/testing/scenario_app/pubspec.yaml
+++ b/testing/scenario_app/pubspec.yaml
@@ -24,26 +24,26 @@ dependencies:
 
 dependency_overrides:
   args:
-    path: ../../../third_party/dart/third_party/pkg/args
+    path: ../../third_party/dart/third_party/pkg/args
   collection:
-    path: ../../../third_party/dart/third_party/pkg/collection
+    path: ../../third_party/dart/third_party/pkg/collection
   crypto:
-    path: ../../../third_party/dart/third_party/pkg/crypto
+    path: ../../third_party/dart/third_party/pkg/crypto
   file:
-    path: ../../../third_party/pkg/file/packages/file
+    path: ../../third_party/pkg/file/packages/file
   meta:
-    path: ../../../third_party/dart/pkg/meta
+    path: ../../third_party/dart/pkg/meta
   path:
-    path: ../../../third_party/dart/third_party/pkg/path
+    path: ../../third_party/dart/third_party/pkg/path
   platform:
-    path: ../../../third_party/pkg/platform
+    path: ../../third_party/pkg/platform
   process:
-    path: ../../../third_party/pkg/process
+    path: ../../third_party/pkg/process
   skia_gold_client:
     path: ../../testing/skia_gold_client
   sky_engine:
     path: ../../sky/packages/sky_engine
   typed_data:
-    path: ../../../third_party/dart/third_party/pkg/typed_data
+    path: ../../third_party/dart/third_party/pkg/typed_data
   vector_math:
-    path: ../../../third_party/pkg/vector_math
+    path: ../../third_party/pkg/vector_math
