--- a/tools/const_finder/pubspec.yaml
+++ b/tools/const_finder/pubspec.yaml
@@ -26,10 +26,10 @@ dev_dependencies:
 
 dependency_overrides:
   args:
-    path: ../../../third_party/dart/third_party/pkg/args
+    path: ../../third_party/dart/third_party/pkg/args
   collection:
-    path: ../../../third_party/dart/third_party/pkg/collection
+    path: ../../third_party/dart/third_party/pkg/collection
   kernel:
-    path: ../../../third_party/dart/pkg/kernel
+    path: ../../third_party/dart/pkg/kernel
   path:
-    path: ../../../third_party/dart/third_party/pkg/path
+    path: ../../third_party/dart/third_party/pkg/path
