Move secondary tree one level up.

--- a/shell/version/version.gni
+++ b/shell/version/version.gni
@@ -10,7 +10,7 @@ declare_args() {
   dart_version = ""
 }
 
-_flutter_root = "//flutter"
+_flutter_root = "//"
 
 if (engine_version == "") {
   engine_version_lines =
