--- a/fml/BUILD.gn
+++ b/fml/BUILD.gn
@@ -127,7 +127,7 @@ source_set("fml") {
   configs += [ "//third_party/icu:icu_config" ]
 
   public_configs = [
-    "//flutter:config",
+    "//:config",
     "//common:flutter_config",
   ]
 
@@ -255,7 +255,7 @@ source_set("build_config") {
   sources = [ "build_config.h" ]
 
   public_configs = [
-    "//flutter:config",
+    "//:config",
     "//common:flutter_config",
   ]
 }
@@ -267,7 +267,7 @@ source_set("command_line") {
   ]
 
   public_configs = [
-    "//flutter:config",
+    "//:config",
     "//common:flutter_config",
   ]
 }
@@ -295,7 +295,7 @@ source_set("string_conversion") {
   deps = [ ":build_config" ]
 
   public_configs = [
-    "//flutter:config",
+    "//:config",
     "//common:flutter_config",
   ]
 }
