--- a/lib/ui/BUILD.gn
+++ b/lib/ui/BUILD.gn
@@ -157,7 +157,7 @@ source_set("ui") {
     "window/viewport_metrics.h",
   ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 
   public_deps = [
     "//flow",
@@ -241,7 +241,7 @@ if (enable_unittests) {
   executable("ui_benchmarks") {
     testonly = true
 
-    public_configs = [ "//flutter:export_dynamic_symbols" ]
+    public_configs = [ "//:export_dynamic_symbols" ]
 
     sources = [ "ui_benchmarks.cc" ]
 
@@ -258,7 +258,7 @@ if (enable_unittests) {
   executable("ui_unittests") {
     testonly = true
 
-    public_configs = [ "//flutter:export_dynamic_symbols" ]
+    public_configs = [ "//:export_dynamic_symbols" ]
 
     sources = [
       "compositing/scene_builder_unittests.cc",
