--- a/shell/platform/darwin/ios/BUILD.gn
+++ b/shell/platform/darwin/ios/BUILD.gn
@@ -55,7 +55,7 @@ source_set("flutter_framework_source_arc") {
     "//shell/platform/darwin/common:framework_common",
     "//third_party/icu",
   ]
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 
   sources = [
     "framework/Source/FlutterTextInputDelegate.h",
@@ -199,7 +199,7 @@ source_set("flutter_framework_source") {
 
   public_configs = [
     ":ios_gpu_configuration_config",
-    "//flutter:config",
+    "//:config",
   ]
 
   frameworks = [
@@ -336,7 +336,7 @@ shared_library("ios_test_flutter") {
   ]
   public_configs = [
     ":ios_gpu_configuration_config",
-    "//flutter:config",
+    "//:config",
   ]
 
   if (darwin_extension_safe) {
@@ -362,7 +362,7 @@ shared_library("create_flutter_framework_dylib") {
     ":flutter_framework_source_arc",
   ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 }
 
 copy("copy_dylib") {
