--- a/shell/platform/embedder/BUILD.gn
+++ b/shell/platform/embedder/BUILD.gn
@@ -180,7 +180,7 @@ template("embedder_source_set") {
     public_configs += [
       ":embedder_gpu_configuration_config",
       ":embedder_header_config",
-      "//flutter:config",
+      "//:config",
       "//impeller:impeller_public_config",
     ]
   }
@@ -197,7 +197,7 @@ embedder_source_set("embedder_as_internal_library") {
 source_set("embedder_headers") {
   public = [ "embedder.h" ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 }
 
 source_set("embedder_test_utils") {
@@ -208,7 +208,7 @@ source_set("embedder_test_utils") {
 
   deps = [ ":embedder_headers" ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 }
 
 # For using the embedder API as internal implementation detail of an
@@ -255,7 +255,7 @@ if (enable_unittests) {
 
     configs += [
       ":embedder_gpu_configuration_config",
-      "//flutter:export_dynamic_symbols",
+      "//:export_dynamic_symbols",
     ]
 
     include_dirs = [ "." ]
@@ -343,7 +343,7 @@ if (enable_unittests) {
     configs += [
       ":embedder_jit_snapshot_setup",
       ":embedder_gpu_configuration_config",
-      "//flutter:export_dynamic_symbols",
+      "//:export_dynamic_symbols",
     ]
 
     include_dirs = [ "." ]
@@ -373,7 +373,7 @@ if (enable_unittests) {
 
     configs += [
       ":embedder_gpu_configuration_config",
-      "//flutter:export_dynamic_symbols",
+      "//:export_dynamic_symbols",
     ]
 
     include_dirs = [ "." ]
@@ -389,7 +389,7 @@ if (enable_unittests) {
 
     configs += [
       ":embedder_gpu_configuration_config",
-      "//flutter:export_dynamic_symbols",
+      "//:export_dynamic_symbols",
     ]
 
     sources = [ "tests/embedder_unittests_proctable.cc" ]
@@ -430,7 +430,7 @@ shared_library("flutter_engine_library") {
 
   deps = [ ":embedder" ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 }
 
 copy("copy_headers") {
