--- a/common/graphics/BUILD.gn
+++ b/common/graphics/BUILD.gn
@@ -31,7 +31,7 @@ source_set("graphics") {
     "//third_party/skia",
   ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
   if (shell_enable_vulkan) {
     public_deps =
         [ "//third_party/vulkan-deps/vulkan-headers/src:vulkan_headers" ]
