--- a/flow/BUILD.gn
+++ b/flow/BUILD.gn
@@ -87,7 +87,7 @@ source_set("flow") {
     "surface_frame.h",
   ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 
   public_deps = [
     "//common",
