--- a/lib/gpu/BUILD.gn
+++ b/lib/gpu/BUILD.gn
@@ -22,7 +22,7 @@ source_set("gpu") {
     cflags += [ "-Wno-implicit-int-float-conversion" ]
   }
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 
   public_deps = []
 
