--- a/lib/io/BUILD.gn
+++ b/lib/io/BUILD.gn
@@ -17,5 +17,5 @@ source_set("io") {
 
   configs += [ "//third_party/dart/runtime:dart_config" ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 }
