--- a/shell/common/BUILD.gn
+++ b/shell/common/BUILD.gn
@@ -61,7 +61,7 @@ template("dart_embedder_resources") {
 
 source_set("platform_message_handler") {
   sources = [ "platform_message_handler.h" ]
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
   deps = [ "//fml:fml" ]
 }
 
@@ -73,7 +73,7 @@ source_set("display") {
     "variable_refresh_rate_display.h",
     "variable_refresh_rate_reporter.h",
   ]
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
   deps = [ "//fml:fml" ]
 }
 
@@ -124,7 +124,7 @@ source_set("common") {
     "vsync_waiter_fallback.h",
   ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 
   public_deps = [
     ":display",
@@ -184,7 +184,7 @@ template("shell_host_executable") {
       "//runtime:libdart",
     ]
 
-    public_configs = [ "//flutter:export_dynamic_symbols" ]
+    public_configs = [ "//:export_dynamic_symbols" ]
   }
 }
 
