--- a/shell/platform/darwin/graphics/BUILD.gn
+++ b/shell/platform/darwin/graphics/BUILD.gn
@@ -38,5 +38,5 @@ source_set("graphics") {
 
   public_deps = [ "//third_party/skia" ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 }
