--- a/shell/platform/darwin/macos/BUILD.gn
+++ b/shell/platform/darwin/macos/BUILD.gn
@@ -128,7 +128,7 @@ source_set("flutter_framework_source") {
     "//third_party/skia",
   ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 
   defines = [
     "FLUTTER_FRAMEWORK",
@@ -311,7 +311,7 @@ if (build_glfw_shell) {
   shared_library("flutter_macos_glfw") {
     deps = [ "//shell/platform/glfw:flutter_glfw" ]
 
-    public_configs = [ "//flutter:config" ]
+    public_configs = [ "//:config" ]
   }
 }
 
