--- a/shell/platform/windows/BUILD.gn
+++ b/shell/platform/windows/BUILD.gn
@@ -157,7 +157,7 @@ copy("publish_headers_windows") {
 shared_library("flutter_windows") {
   deps = [ ":flutter_windows_source" ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 }
 
 test_fixtures("flutter_windows_fixtures") {
@@ -223,7 +223,7 @@ executable("flutter_windows_unittests") {
 
   configs += [ "//shell/platform/common:desktop_library_implementation" ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 
   deps = [
     ":flutter_windows_fixtures",
@@ -243,7 +243,7 @@ executable("flutter_windows_unittests") {
 shared_library("flutter_windows_glfw") {
   deps = [ "//shell/platform/glfw:flutter_glfw" ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 }
 
 group("windows_glfw") {
