--- a/shell/version/BUILD.gn
+++ b/shell/version/BUILD.gn
@@ -16,5 +16,5 @@ source_set("version") {
     "DART_VERSION=\"$dart_version\"",
   ]
 
-  public_configs = [ "//flutter:config" ]
+  public_configs = [ "//:config" ]
 }
