--- a/impeller/renderer/backend/gles/BUILD.gn
+++ b/impeller/renderer/backend/gles/BUILD.gn
@@ -16,6 +16,7 @@ impeller_component("gles_unittests") {
   sources = [
     "test/capabilities_unittests.cc",
     "test/formats_gles_unittests.cc",
+    "test/gpu_tracer_gles_unittests.cc",
     "test/mock_gles.cc",
     "test/mock_gles.h",
     "test/mock_gles_unittests.cc",
@@ -43,7 +44,6 @@ impeller_component("gles") {
     "command_buffer_gles.cc",
     "command_buffer_gles.h",
     "context_gles.cc",
-    "context_gles.h",
     "context_gles.h",
     "description_gles.cc",
     "description_gles.h",
