Add missing headers to the fml source_set.
These being missing came up when internal build rules were being derived from
the ones here.

--- a/fml/BUILD.gn
+++ b/fml/BUILD.gn
@@ -69,6 +69,9 @@ source_set("fml") {
     "shared_thread_merger.cc",
     "shared_thread_merger.h",
     "size.h",
+    "size.h",
+    "status.h",
+    "status_or.h",
     "synchronization/atomic_object.h",
     "synchronization/count_down_latch.cc",
     "synchronization/count_down_latch.h",
